# nova

./: fusion_base.py  fusion_bev.py  fusion_seam.py  reproject.py  test_reproject.py  zed_360_stitch.py
depth_reproject/: README.md  fused_pc_fast.py  fused_pointcloud_viewer.py  reproject_gpu.py  zed_360_panorama.py  zed_360_panorama_gpu.py
depth_reproject/cpp/: CMakeLists.txt  README.md
depth_reproject/cpp/include/: GLViewer.hpp
depth_reproject/cpp/src/: GLViewer.cpp  main.cpp
depth_reproject/cpp_panorama/: CMakeLists.txt  README.md
depth_reproject/cpp_panorama/include/: PanoramaViewer.hpp  kernels.cuh
depth_reproject/cpp_panorama/src/: PanoramaViewer.cpp  kernels.cu  main.cpp
docs/: methods-tried.md  research-orin-360-stitch.md
docs/superpowers/plans/: 2026-06-04-depth-reprojection.md
docs/superpowers/specs/: 2026-06-03-depth-reprojection-design.md
manim_explainers/: README.md  depth_reproject.py  nova360.py  panorama.py
manim_explainers/media/videos/nova360/480p15/partial_movie_files/Nova360/: partial_movie_file_list.txt
